update 4.9.9 beta30 HU strings

--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="abc_action_mode_done">Kész</string>
+    <string name="abc_action_bar_home_description">Ugrás a főoldalra</string>
+    <string name="abc_action_bar_up_description">Felfelé mozgatás</string>
+    <string name="abc_action_menu_overflow_description">További lehetőségek</string>
+    <string name="abc_searchview_description_search">Keresés</string>
+    <string name="abc_searchview_description_query">Keresési lekérdezés</string>
+    <string name="abc_searchview_description_clear">Lekérdezés törlése</string>
+    <string name="abc_searchview_description_submit">Lekérdezés küldése</string>
+    <string name="abc_searchview_description_voice">Hangalapú keresés</string>
+    <string name="abc_activitychooserview_choose_application">Válasszon ki egy alkalmazást</string>
+    <string name="abc_activity_chooser_view_see_all">Összes megtekintése</string>
+    <string name="abc_shareactionprovider_share_with_application">Megosztás a következővel: %s</string>
+    <string name="abc_shareactionprovider_share_with">Megosztás a következővel:</string>
     <string name="about_author">Szerző:</string>
     <string name="about_blizzard">Hóvihar</string>
     <string name="about_cloudy">Felhős</string>
     <string name="about_dust">Szmog</string>
     <string name="about_fog">Ködös</string>
-    <string name="about_for_translators">Fordítás:</string>
+    <string name="about_for_translators">Magyar fordítás:</string>
     <string name="about_for_translators_text">Vagyula (vagyula1@gmail.com)</string>
     <string name="about_hailstone">Jégeső</string>
     <string name="about_haze">Köd</string>
@@ -26,38 +39,31 @@
     <string name="about_version">Verzió:</string>
     <string name="action_bar_selected_format">Kiválasztva: %d</string>
     <string name="app_name">Időjárás</string>
-    <string name="applying_theme">Táma alkalmazása\u2026</string>
+    <string name="applying_theme">Téma alkalmazása…</string>
     <string name="btn_add_location">Új helyszín</string>
     <string name="btn_apply_theme">Téma alkalmazása</string>
     <string name="btn_delete_location">Helyszín törlése</string>
     <string name="cancel">Mégsem</string>
-    <string name="changelog">Változások</string>
     <string name="clear_miui_data">MIUI időjárásadatok törlése</string>
     <string name="clear_miui_data_dialog">MIUI Időjárás törlése</string>
     <string name="clear_miui_data_dialog_ask">Törli a MIUI Időjárás Szolgáltató adatbázis adatát?</string>
     <string name="clear_miui_data_dialog_text">MIUI időjárás szolgáltató adatbázisa törölve!</string>
     <string name="clear_miui_data_summary">MIUI időjárás szolgáltató adatbázisának törlése</string>
     <string name="close">Bezárás</string>
-    <string name="date_format_title">Dátum formátum</string>
+    <string name="date_format_title">Dátumformátum</string>
+    <string name="date_format_mdy">yyyy.MM.dd.</string>
+    <string name="date_format_dmy">dd.MM.yyyy</string>
     <string name="dialog_color_picker">Szín választó</string>
     <string name="donate">Adományozás</string>
     <string name="donations_button_close">Bezár</string>
-    <string name="donations_description">Hasznosnak találod ezt az alkalmazást?\nTámogathatod a fejlsztést flattring-el vagy küldhetsz támogatást a Google Android Market-et használva!</string>
-    <string name="donations_flattr">Flattr</string>
-    <string name="donations_flattr_description">A Flattr 10 %-ot levesz havi díjként!</string>
-    <string name="donations_google_android_market">Google Android Market</string>
-    <string name="donations_google_android_market_description">A Google része 30 % minden adományból!</string>
-    <string name="donations_google_android_market_donate_button">Adományozok!</string>
-    <string name="donations_google_android_market_not_supported">Az alkalmazáson belüli adományozás nem támogatott. A Google Android Market megfelelően van telepítve?</string>
-    <string name="donations_google_android_market_not_supported_title">In-App Donations nem támogatott</string>
-    <string name="donations_google_android_market_text">Mennyi?</string>
-    <string name="donations_paypal">PayPal</string>
-    <string name="donations_paypal_description">Az adományozott összeget megválaszthatja a gombra való kattintás után.</string>
-    <string name="donations_paypal_item_name">InApp Adományozás</string>
-    <string name="donations_thanks_dialog">Köszönjük a támogatást!\nNagyra értékeljük!</string>
+    <string name="donations_description">"Hasznosnak találja az alkalmazást?
+Támogassa a fejlsztést adomány küldésével!"</string>
+    <string name="donations_thanks_dialog">Köszönjük a támogatást!
+Nagyra értékeljük!</string>
     <string name="donations_thanks_dialog_title">Köszönöm!</string>
+    <string name="donations_paypal_description">Az adományozott összeget kiválaszthatja a gombra való kattintás után.</string>
     <string name="end_time_title">Vége</string>
-    <string name="fetching_location">Helymeghatározás\u2026</string>
+    <string name="fetching_location">Helymeghatározás…</string>
     <string name="forecast_chance_of_rain">Eső várható</string>
     <string name="forecast_chance_of_showers">Zivatar várható</string>
     <string name="forecast_chance_of_snow">Havazás várható</string>
@@ -104,8 +110,9 @@
     <string name="forecast_thunderstorms">Zivatarok</string>
     <string name="forecast_tornado">Tornádó</string>
     <string name="forecast_windy">Vihar</string>
+    <string name="changelog">Változások</string>
     <string name="just_now">Most</string>
-    <string name="loading">Betöltés\u2026</string>
+    <string name="loading">Betöltés…</string>
     <string name="location_edit">Gépelje be a város nevét</string>
     <string name="location_gps">Jelenlegi helyszín</string>
     <string name="location_list">Helyszínek</string>
@@ -133,12 +140,14 @@
     <string name="moon_waninggibbous">Fogyó hold</string>
     <string name="moon_waxingcrescent">Növekvő hold</string>
     <string name="moon_waxinggibbous">Növekvő hold</string>
-    <string name="network_error">Csatlakozás sikertelen.\nEllenőrizze a hálózati beállításokat.</string>
+    <string name="network_error">Csatlakozás sikertelen.
+Ellenőrizze a hálózati beállításokat.</string>
     <string name="network_in_quiet_hours">Akkukímélési mód bekapcsolva. Frissítések leállítva.</string>
     <string name="network_in_roaming">Adatbarangoláskor frissítések tiltásának beállítása.</string>
     <string name="network_wifi_only">Frissítések beállítása csak Wi-Fi-ről.</string>
     <string name="new_version">Új verzió</string>
-    <string name="no_provider">Helymeghatározás sikertelen - a helyszínt válassza ki manuálisan</string>
+    <string name="no_provider">Helymeghatározás sikertelen 
+Válassza ki a helyszínt manuálisan</string>
     <string name="no_weather_provider">Nincs elérhető MIUI időjárás szolgáltató</string>
     <string name="not_now">Most nem</string>
     <string name="press_color_to_apply">Alkalmazáshoz nyomja meg a színt</string>
@@ -149,7 +158,6 @@
     <string name="quiet_hours_enabled_off">Ne frissítsen a megadott időszak alatt</string>
     <string name="quiet_hours_enabled_on">Akkukímélési mód engedélyezve</string>
     <string name="quiet_hours_title">Akkukímélési mód</string>
-    <string name="save_screen_shot_failed">Képernyőkép mentése nem sikerült</string>
     <string name="settings_about_title">Névjegy</string>
     <string name="settings_category_animation">Animáció beállítások</string>
     <string name="settings_category_animation_sum">Időjárás animáció beállítások és letöltés</string>
@@ -157,15 +165,15 @@
     <string name="settings_category_appearance">Megjelenítés</string>
     <string name="settings_category_appearance_sum">Megjelenítési beállítás (adat kijelzés/elrejtés stb.)</string>
     <string name="settings_category_forecast_update">Időjárás frissítés</string>
-    <string name="settings_category_miui">MIUI ROM-ok</string>
+    <string name="settings_category_miui">MIUI ROM-ok támogatása</string>
     <string name="settings_category_miui_sum">MIUI támogatás (be-kikapcsolás,adatok törlése stb.)</string>
     <string name="settings_category_network">Hálózat beállítás</string>
-    <string name="settings_category_notification">Értesítés beállítás</string>
-    <string name="settings_category_notification_sum">Időjárás értesítés beállítás</string>
+    <string name="settings_category_notification">Értesítések</string>
+    <string name="settings_category_notification_sum">Időjárás megjelenítése az értesítési panelen és az állapotsoron</string>
     <string name="settings_category_update">Frissítési beállítások</string>
     <string name="settings_category_update_sum">Automatikus frissítés beállításai</string>
     <string name="settings_category_widgets">Widget beállítások</string>
-    <string name="settings_category_widgets_sum">Widgets megjelenés és érintési műveletek</string>
+    <string name="settings_category_widgets_sum">Widget megjelenítés és érintési műveletek</string>
     <string name="settings_check_updates_summary">Frissítések ellenőrzése indításkor</string>
     <string name="settings_check_updates_title">Frissítések ellenőrzése</string>
     <string name="settings_citydb_provider">Város adatbázis Szolgáltató</string>
@@ -177,21 +185,25 @@
     <string name="settings_miui_v5_summary">MIUI v5 ROM-hoz kapcsolja be</string>
     <string name="settings_miui_v5_title">MIUI v5 ROM</string>
     <string name="settings_moon_phases_title">Holdfázis</string>
-    <string name="settings_notification_color_title">Értesítősáv színe</string>
-    <string name="settings_notification_summary">Időjárás kijelzés az értesítési területen</string>
+    <string name="settings_notification_color_title">Állapotsor ikon színe</string>
+    <string name="settings_notification_hourly_view">Óránkénti időjárás</string>
+    <string name="settings_notification_hourly_view_summary">Óránkénti időjárás megjelenítése az értesítési panelen</string>
+    <string name="settings_notification_summary">Jelenlegi időjárás megjelenítése az értesítési panelen</string>
     <string name="settings_notification_text_color_summary">Az értesítő szöveg és ikonok színe</string>
-    <string name="settings_notification_title">Értesítés kijelzés</string>
+    <string name="settings_notification_title">Kijelzés az értesítési panelen</string>
     <string name="settings_notification_type">Értesítés típusa</string>
+    <string name="settings_notification_statusbar_summary">Értesítés megjelenítése az állapotsoron</string>
+    <string name="settings_notification_statusbar_title">Kijelzés az állapotsoron</string>
     <string name="settings_show_info_summary">Felület elemeinek kijelzése/elrejtése</string>
     <string name="settings_show_info_title">Információ kijelzés</string>
     <string name="settings_time_format_12h">12 órás formátum</string>
-    <string name="settings_update_autoupdate_summary">Időjárás előrejelzés automatikus frissítése</string>
+    <string name="settings_update_autoupdate_summary">Az időjárás előrejelzés automatikus frissítése</string>
     <string name="settings_update_autoupdate_title">Automatikus frissítés</string>
     <string name="settings_update_interval_title">Frissítés gyakorisága</string>
     <string name="settings_update_roaming_summary">Időjárás frissítés adatbarangolás alatt.A szolgáltató költséget számolhat fel</string>
     <string name="settings_update_roaming_title">Frissítés adatbarangoláskor</string>
     <string name="settings_update_wake_title">Eszköz felébresztése</string>
-    <string name="settings_update_wifi_only_summary">Az időjárás automatikus frissítése Wi-Fi kapcsolat esetén</string>
+    <string name="settings_update_wifi_only_summary">Az időjárás frissítése csak Wi-Fi kapcsolat esetén</string>
     <string name="settings_update_wifi_only_title">Frissítés csak Wi-Fi-ről</string>
     <string name="settings_weather_provider">Időjárás szolgáltató</string>
     <string name="settings_widgets_click_clock_summary">Alkalmazás beállítások indítása</string>
@@ -229,10 +241,9 @@
     <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">"\#WeatherBZ# Ma %1$s időjárása : %2$s, %3$s, %4$s. Frissítve %5$s."</string>
     <string name="share_weather_title">Időjárás adatok megosztása</string>
+    <string name="save_screen_shot_failed">Képernyőkép mentése nem sikerült</string>
     <string name="start_time_title">Kezdete</string>
     <string name="temperature_units">Hőmérséklet mértékegysége</string>
-    <string name="temperature_units_c">Celsius</string>
-    <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Szöveg szín</string>
     <string name="theme_author">"Szerző: "</string>
     <string name="theme_date">"Dátum: "</string>
@@ -296,4 +307,6 @@
     <string name="zodiac_scorpio">Skorpió</string>
     <string name="zodiac_taurus">Bika</string>
     <string name="zodiac_virgo">Szűz</string>
+    <string name="theme_pack_weather_title">Alapértelmezett</string>
+    <string name="theme_pack_temp_title">Alapértelmezett</string>
 </resources>
