--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -85,17 +85,17 @@ Naprawdę to doceniam!"</string>
     <string name="forecast_light_rain">Słaby deszcz</string>
     <string name="forecast_light_snow">Słaby śnieg</string>
     <string name="forecast_mist">Mgła</string>
-    <string name="forecast_mostly_cloudy">Całkowite zachmurzenie</string>
+    <string name="forecast_mostly_cloudy">Zachmurzenie</string>
     <string name="forecast_mostly_sunny">Słonecznie</string>
     <string name="forecast_overcast">Pochmurno</string>
     <string name="forecast_partly_cloudy">Częściowe zachmurzenie</string>
-    <string name="forecast_partly_sunny">Przeważnie słonecznie</string>
+    <string name="forecast_partly_sunny">Częściowo słonecznie</string>
     <string name="forecast_rain">Deszcz</string>
     <string name="forecast_rain_and_snow">Deszcz ze śniegiem</string>
     <string name="forecast_rain_showers">Opady deszczu</string>
     <string name="forecast_sand">Piasek</string>
     <string name="forecast_scattered_showers">Przelotne opady</string>
-    <string name="forecast_scattered_thunderstorms">Możliwe burze</string>
+    <string name="forecast_scattered_thunderstorms">Przelotne burze</string>
     <string name="forecast_showers">Opady</string>
     <string name="forecast_sleet">Deszcz ze śniegiem</string>
     <string name="forecast_smoke">Zadymienie</string>
@@ -174,7 +174,7 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_citydb_provider">Miasta</string>
     <string name="settings_click_actions">Akcje kliknięcia</string>
     <string name="settings_check_updates_summary">Sprawdź aktualizacje aplikacji przy uruchamianiu</string>
-    <string name="settings_check_updates_title">Sprawdjzaj aktualizacje</string>
+    <string name="settings_check_updates_title">Sprawdzaj aktualizacje</string>
     <string name="settings_colorize_weather_icons_title">Kolorowane ikony</string>
     <string name="settings_colorize_weather_icons_summary">Ustawia kolor ikon wg. koloru tekstu napisów</string>
     <string name="settings_miui_support_summary">Włącz wsparcie dla natywnych widżetów MIUI</string>
@@ -233,10 +233,10 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Domyślnie 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Wiatr</string>
     <string name="settings_widgets_widget4x3">Widget 4x3</string>
-    <string name="settings_widgets_widget4x3_hourly_view">Pokaż godzinową pogodęr</string>
+    <string name="settings_widgets_widget4x3_hourly_view">Pokaż godzinową pogodę</string>
     <string name="share">Udostępnij</string>
     <string name="share_content">\#WeatherBZ#</string>
-    <string name="share_weather_content">"\#WeatherBZ# Dziś: %1$s jest %2$s, %3$s, %4$s. Aktualizacja: %5$s."</string>
+    <string name="share_weather_content">"\#WeatherBZ# Dziś: w %1$s jest %2$s, %3$s, %4$s. Aktualizacja: %5$s."</string>
     <string name="share_weather_title">Udostępnij dane pogody</string>
     <string name="save_screen_shot_failed">Nie udało się zapisać zrzutu</string>
     <string name="start_time_title">Start</string>
